# Plato

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt
Documentation/: README.md
src/: main.cpp  project_generator.cpp  project_generator.hpp  window.cpp  window.hpp
